Move settings components into "settings" subfolders.

--- a/src/app/pages/feeds/feeds.component.html
+++ b/src/app/pages/feeds/feeds.component.html
@@ -36,6 +36,11 @@
               <mat-icon>delete</mat-icon>
               <span>Delete Feed</span>
             </button>
+            <mat-divider></mat-divider>
+            <button mat-menu-item routerLink="/settings/algorithm">
+              <mat-icon>model_training</mat-icon>
+              <span>Algorithm</span>
+            </button>
           </mat-menu>
         </div>
       </div>
