--- a/src/app/components/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/components/confirm-dialog/confirm-dialog.component.html
@@ -4,7 +4,7 @@
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button (click)="cancel()">{{ data.cancelText || 'Cancel' }}</button>
-  <button mat-raised-button [ngClass]="data.confirmColor" (click)="confirm()">
+  <button mat-flat-button [ngClass]="data.confirmColor" (click)="confirm()">
     {{ data.confirmText || 'Confirm' }}
   </button>
 </mat-dialog-actions>
