--- a/src/app/pages/settings/algorithm/algorithm.scss
+++ b/src/app/pages/settings/algorithm/algorithm.scss
@@ -76,7 +76,7 @@
 }
 
 .actions-card {
-  margin-bottom: 24px;
+  margin-top: 0;
   
   .action-buttons {
     display: flex;
@@ -92,6 +92,8 @@
 }
 
 .metrics-card {
+    margin-bottom: 24px;
+
   .tab-content {
     padding: 24px 0;
     
