refactor(editor): change publish button style to flat for consistency

--- a/src/app/pages/article/editor/editor.component.html
+++ b/src/app/pages/article/editor/editor.component.html
@@ -16,8 +16,7 @@
     Save Draft
   </button>
   
-  <button mat-raised-button 
-          color="primary" 
+  <button mat-flat-button 
           (click)="publish()" 
           [disabled]="!isValid() || isPublishing()">
     <mat-icon>publish</mat-icon>
