--- a/src/app/components/note-editor-dialog/note-editor-dialog.component.html
+++ b/src/app/components/note-editor-dialog/note-editor-dialog.component.html
@@ -184,7 +184,9 @@
   <div mat-dialog-actions class="dialog-actions">
     <button mat-button (click)="cancel()" [disabled]="isPublishing()">
       Cancel
-    </button> <button mat-raised-button color="primary" (click)="publishNote()" [disabled]="!canPublish()"
+    </button> 
+    
+    <button mat-flat-button (click)="publishNote()" [disabled]="!canPublish()"
       class="publish-button">
       @if (isPublishing()) {
       <ng-container>
